--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://logodix.com/logo/59895.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quora Clone</title>
+    <title>Quora</title>
   </head>
   <body>
     <div id="root"></div>
